feat: plugin system for mtg
